Trunk: #676 Apertura de nuevas celdas de memoria via menu  * Se debe mantener la tecla shift apretada, muestra los nombres subrayadas. Se incluye por defecto. Solo permite abrir un nueva celda (llamada 'paralela')  * Bug en la generacion de nuevos vinculos, no mantenia la celda de memoria actual  * Se agrandaron los campos 'padre_id' e 'hijo_id' de la tabla apex_objeto_datos_rel_asoc de 20 a 40 caracteres, ya que hacían referencia al campo 'identificador' de 40 caracteres de la tabla apex_objeto_dependencias

--- a/www/css/listmenu_horizontal.css
+++ b/www/css/listmenu_horizontal.css
@@ -98,3 +98,8 @@ ul.horizontal ul a { float:none !important; }
 * html ul.horizontal a { position:relative; }
 ul[class^="horizontal"] ul { display:none; }
 ul[class^="horizontal"] ul { displa\y:block; }
+
+
+a.menu-link-alt {
+	text-decoration: underline !important;
+}
